fix nav spacing

--- a/assets/stylesheets/global.scss
+++ b/assets/stylesheets/global.scss
@@ -43,7 +43,6 @@ header {
     font-family: "HelveticaNeue-Roman", Helvetica, Arial, sans-serif;
     font-size: 25pt; 
     font-weight: 100;
-
 }
 
 .menu-text {
@@ -83,8 +82,18 @@ footer {
 
 .menu-item {
     cursor: pointer;
-    margin: 10px;
+    // margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px 10px;
+}
+
+.menu-item:first-of-type {
+    margin-left: 10px;
+}
+
+.menu-item:last-of-type {
+    margin-right: 10px;
 }
 
 .menu-item a {
@@ -94,7 +103,7 @@ footer {
 
 .menu-item-active {
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 10px;
 }
 
 @media all and (min-width: 600px) {
